...
                    NavigationLink {
                        AlertsSettingsView(model: model)
                    } label: {
                        Label("Alerts", systemImage: "speaker.wave.2")
                            .labelStyle(RowLabelStyle(color: Color.purple))
                    }
                    .accessibilityIdentifier("AlertsNavLink")
                }

                Section(header: Text("Logs")) {
                    Toggle(isOn: $model.record) {
                        Label("Automatically log winch launches", systemImage: "recordingtape.circle")
                            .labelStyle(RowLabelStyle(color: Color.accentColor))
...
                        
                    }
                }
            }
            .tint(.accentColor)
            .listStyle(GroupedListStyle())
            .navigationTitle("Settings")
            .navigationBarItems(leading:
                Button(action: {
                    showSettings.toggle()
                }) {
                    Image(systemName: "arrow.left")
                }
...
